commit al master del blog personal version reciente

--- a/blogpersonal.html
+++ b/blogpersonal.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>como aprendi a programar</title>
+    <link rel="stylesheet" href="css/style.css" />
+  
 </head>
 <body>
-  <h1>el curso de programacion basica gratis de platzi</h1>  
-<p>en este curso aprenderas todos los fundamentos y promer contacto
-    con lenguajes de programacion.
-</p>
+ 
+    <div id="container">
+      <div id="post">
+       <h1>blog personal de kenry programando</h1>
+       <p>aprendiiendo con el curso de programacion basica de platzi.</p> 
+      </div>
+    </div>
 </body>
 </html>
