--- a/blogpersonal.html
+++ b/blogpersonal.html
@@ -11,10 +11,15 @@
 <body>
  
     <div id="container">
+      <div id="cabecera">
+        aqui inicia la cabecera
       <div id="post">
        <h1>blog personal de kenry programando</h1>
        <p>aprendiiendo con el curso de programacion basica de platzi.</p> 
       </div>
+    </div>
+    </div>
+
     </div>
 </body>
 </html>
