--- a/blogpersonal.html
+++ b/blogpersonal.html
@@ -12,7 +12,7 @@
  
     <div id="container">
       <div id="cabecera">
-        aqui inicia la cabecera
+        kenry paolo paredes blog
       <div id="post">
        <h1>blog personal de kenry programando</h1>
        <p>aprendiiendo con el curso de programacion basica de platzi.</p> 
