--- a/blogpersonal.html
+++ b/blogpersonal.html
@@ -13,9 +13,11 @@
     <div id="container">
       <div id="cabecera">
         kenry paolo paredes blog
+      
       <div id="post">
        <h1>blog personal de kenry programando</h1>
        <p>aprendiiendo con el curso de programacion basica de platzi.</p> 
+      <p>aprendiendo html y css para hacer paginas web</p>
       </div>
     </div>
     </div>
