--- a/blogpersonal.html
+++ b/blogpersonal.html
@@ -14,6 +14,9 @@
       <div id="post">
        <h1>blog personal de kenry programando</h1>
        <p>aprendiiendo con el curso de programacion basica de platzi.</p> 
+      
+       <p>aprendiendo a usar etiquetas y class</p>
+      
       </div>
     </div>
 </body>
